# mola_sm_loop_closure-release

./: .clang-tidy  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  formatter.sh  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/: check_style.sh
.github/workflows/: ros-build.yml
apps/: mola-sm-lc-cli.cpp
debian/: changelog  control  copyright  gbp.conf  rules
module/include/mola_sm_loop_closure/: FrameToFrameLoopClosure.h  LoopClosureInterface.h  SimplemapLoopClosure.h
module/src/: FrameToFrameLoopClosure.cpp  LoopClosureInterface.cpp  SimplemapLoopClosure.cpp  register.cpp
pipelines/: loop-closure-f2f-lidar3d-gicp.yaml  loop-closure-lidar2d.yaml  loop-closure-lidar3d-gicp.yaml  loop-closure-lidar3d-icp.yaml
rpm/: ros-rolling-mola-sm-loop-closure.spec  template.spec
test/: CMakeLists.txt  test_cli_f2f_gicp.cpp
