<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>mola_sm_loop_closure</name>
  <version>1.0.0</version>
  <description>Simplemap loop-closure postprocessing library and CLI tool</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license file="LICENSE">GPLv3</license>

  <url type="website">https://docs.mola-slam.org/</url>
  <url type="repository">https://github.com/MOLAorg/mola_lidar_odometry/</url>

  <author email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</author>

  <depend>gtsam</depend>
  <depend>mola_common</depend>
  <depend>mola_georeferencing</depend>
  <depend>mola_gtsam_factors</depend>
  <depend>mola_pose_list</depend>
  <depend>mola_relocalization</depend>
  <depend>mola_yaml</depend>
  <depend>mp2p_icp</depend>
  <depend>mrpt_libgui</depend>
  <depend>mrpt_libmaps</depend>
  <depend>mrpt_libtclap</depend>

  <doc_depend>doxygen</doc_depend>

  <!-- BUILD TOOLS -->
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gtest</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 -->
  <build_depend>ros_environment</build_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <!-- Test datasets to run on them: -->
  <test_depend>mola_test_datasets</test_depend>
  <test_depend>mola_metric_maps</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
